# sesyncai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
sesyncai/: __init__.py  __main__.py  cli.py  exporters.py  extractor.py  gist.py  instructions.py  model.py  scanner.py
tests/: test_exporters.py  test_extractor.py  test_instructions.py  test_model.py  test_scanner.py
